2008-05-08  Federico Mena Quintero  <federico@novell.com>

	* clock.c (set_time): Pass the XID of the applet's windowto
	set_system_time_async().

2008-05-08  Federico Mena Quintero  <federico@novell.com>
	* clock-location.c (clock_location_make_current): Take in a
	transient_parent_xid argument.

	* clock.c (location_start_element): Pass the XID of the applet's
	window to clock_location_make_current().

	* clock-location-tile.c (make_current): Pass XID of the toplevel
	widget's window.

2008-05-08  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=384159

	When calling the (obsolete) org.gnome.PolicyKit.Manager.ShowDialog
	method through PolicyKit, pass an XID for the transient parent
	window of what will be the auth dialog.  This prevents the window
	manager from thinking that the auth dialog is a rogue dialog with
	no parent.

	* set-timezone.c (SetTimeCallbackData): Add a transient_parent_xid
	field.
	(do_auth_async): Pass the transient_parent_xid to the ShowDialog
	method, instead of 0.
	(set_system_time_async): g_new() for safety.  Take in a transient_parent_xid argument.
	(set_system_timezone_async): Likewise.

	* clock.c (set_time): For now, pass 0 for the transient_parent_xid.

	* clock-location.c (clock_location_make_current): Likewise.

2008-05-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (is_appointment): accept google uri too, for
	google calendars and use g_ascii_strcasecmp(). Should help with bug
	#525691
	(is_birthday), (is_weather): use g_ascii_strcasecmp()

2008-04-23  Matthias Clasen  <mclasen@redhat.com>

	* system-timezone.c (system_timezone_is_zone_file_valid): Don't assume
	that g_io_channel_read_chars returns a NUL-terminated string - 
	it doesn't.

==================== 2.23.1 ====================

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* gnome-clock-applet-mechanism.policy.in: rename to...
	* org.gnome.clockapplet.mechanism.policy.in: this, and add <vendor>,