@@ -1,3 +1,8 @@
+2008-05-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* clock.c: Disable the "Set System Time" button when we
+	don't have the necessary privileges. 
+
 2008-05-08  Federico Mena Quintero  <federico@novell.com>
 
 	* clock.c (set_time): Pass the XID of the applet's windowto
